# lucid-dreaming-core

./: .gitignore  LRLR_classification_report.md  RAW_EEG_REM_DETECTION_GUIDE.md  README.md  REM_Detection_Comparison_Guide.md  REM_detection.ipynb  alertness_best_variant.pkl  alertness_detection.py  alertness_detection_revamped.ipynb  alertness_lightgbm.pkl  alertness_model.pkl  alertness_model_training.ipynb  alertness_pipeline_v8.ipynb  alertness_remcue_pipeline_7.ipynb  alertness_score_pipeline-2old.ipynb  alertness_score_pipeline.ipynb  alertness_score_pipeline_3.ipynb  alertness_score_pipeline_4.ipynb  alertness_stage_pipeline_5.ipynb  all_nights_rem_analysis.csv  analyze_90_95_confidence_rem.py  analyze_95_confidence_rem.py  analyze_all_nights_rem.py  checkpoint_epoch_50.keras  classification_report_conv1d_model_20250603_122555.md  compare_yasa_labels.py  comprehensive_confidence_analysis.py  comprehensive_threshold_comparison.py  confidence_threshold_analysis_results.csv  config_thresholds.txt  detailed_yasa_analysis.py  detect_rem_realtime.py  diagnose_rem_data.py  dl_alertness_detection.py  extract_rem_data_for_training.py  final_confidence_analysis.py  final_confidence_analysis_results.csv  final_summary_report.py  find_best_lrlr_thresholds.py  fpr_based_threshold_analysis.csv  (+72 more)
app/: FRENZTOOLKIT.md  INSTRUCTIONS.md  index.html  main.py  simulate_run.py
benji-for-report/: prompt.txt  simple_vis.py  test_LRLR.py
experiments/: alertness_detection.py  get_scores.py  lstm_training_data.npz  run_simulation_analysis.ipynb  test_LRLR.ipynb  test_REM_detection.ipynb  (+7 more)
(+25 files in other folders)
