[project]
name = "frenztoolkit-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.4",
    "mne>=1.8.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pip>=25.1",
    "scipy>=1.13.1",
    "uvicorn>=0.34.2",
    "playsound3>=3.0.0", # Changed from playsound
    "soundfile>=0.12.1",
    "frenztoolkit>=0.2.3",
    "imbalanced-learn>=0.12.4",
    "yasa>=0.6.5",
    "scikit-learn>=1.3.0",
]
